example = []

[package]
name = "gl"
version = "0.0.7"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Corey Richardson",
        "Arseny Kapoulkine"
]
description = "OpenGL bindings"
license = "Apache-2.0"
build = "src/gl/build.rs"
repository = "https://github.com/bjz/gl-rs/"

[lib]
name = "gl"
path = "src/gl/lib.rs"

[build-dependencies.gl_generator]
path = "src/gl_generator"
version = "*"

[build-dependencies.khronos_api]
path = "src/khronos_api"
version = "0.0.5"

[dependencies.gl_common]
path = "src/gl_common"
version = "0.0.3"

[dependencies]
libc = "*"

#[dev-dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs"
