[package]

name = "gl_generator"
version = "0.4.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Corey Richardson",
        "Arseny Kapoulkine"
]
description = "Syntax extension for creating bindings to the Khronos OpenGL and related APIs"
repository = "https://github.com/bjz/gl-rs"
license = "Apache-2.0"

[lib]
name = "gl_generator"
path = "lib.rs"

[dependencies]
khronos_api = { version = "1.0.0", path = "../khronos_api" }
log = "0.3.2"
xml-rs = "0.2.2"
