[package]
name = "gl_generator"
version = "0.14.0"
authors = [
    "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
    "Corey Richardson",
    "Arseny Kapoulkine",
]
description = "Code generators for creating bindings to the Khronos OpenGL APIs."
license = "Apache-2.0"
documentation = "https://docs.rs/gl_generator"
homepage = "https://github.com/brendanzab/gl-rs/"
repository = "https://github.com/brendanzab/gl-rs/"
readme = "README.md"
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["gl", "egl", "opengl", "khronos"]

[lib]
name = "gl_generator"
path = "lib.rs"

[features]
unstable_generator_utils = []

[dependencies]
khronos_api = { version = "3.1.0", path = "../khronos_api" }
log = "0.4"
xml-rs = "0.8"
