[package]
name = "khronos_api"
version = "2.0.0"
authors = [
  "Brendan Zabarauskas <bjzaba@yahoo.com.au>",
  "Corey Richardson",
  "Arseny Kapoulkine",
  "Pierre Krieger <pierre.krieger1708@gmail.com>",
]
description = "The Khronos XML API Registry, exposed as byte string constants."
license = "Apache-2.0"
documentation = "https://docs.rs/khronos_api"
homepage = "https://github.com/brendanzab/gl-rs/khronos_api/"
repository = "https://github.com/brendanzab/gl-rs/"
readme = "README.md"

include = [
  "/README.md",
  "/src/**/*",
  "/Cargo.toml",
  "/api/xml/**/*.xml",
  "/api_egl/api/**/*.xml",
]

categories = ["rendering::graphics-api"]
keywords = ["gl", "egl", "opengl", "khronos"]
