[package]
name = "webgl_stdweb"
version = "0.1.0"
authors = [
    "Diggory Blake",
]
description = "WebGL bindings (stdweb)"
license = "Apache-2.0"
build = "build.rs"
documentation = "https://docs.rs/webgl_stdweb"
homepage = "https://github.com/brendanzab/gl-rs/webgl/"
repository = "https://github.com/brendanzab/gl-rs/"
readme = "README.md"
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["webgl", "stdweb"]

[build-dependencies]
webgl_generator = { version = "0.1.0", path = "../webgl_generator" }

[dependencies]
stdweb-derive = { path = "../../stdweb/stdweb-derive" }
stdweb = { path = "../../stdweb" }
serde = "1.0.0"
serde_derive = "1.0.0"
