[package]
name = "webgl_generator"
version = "0.2.0"
authors = [
    "Diggory Blake",
]
description = "Code generators for creating bindings to the WebGL APIs."
license = "Apache-2.0"
documentation = "https://docs.rs/webgl_generator"
homepage = "https://github.com/brendanzab/gl-rs/"
repository = "https://github.com/brendanzab/gl-rs/"
readme = "README.md"
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["webgl"]

[lib]
name = "webgl_generator"
path = "lib.rs"

[dependencies]
khronos_api = { version = "3.1.0", path = "../khronos_api" }
webidl = { version = "0.9" }
heck = { version = "0.3" }
RustyXML = "0.1"
html2runes = "1.0"
regex = "1.3"
