[package]
name = "webgl_stdweb"
version = "0.3.0"
authors = [
    "Diggory Blake",
]
description = "WebGL bindings (stdweb)"
license = "Apache-2.0"
build = "build.rs"
documentation = "https://docs.rs/webgl_stdweb"
homepage = "https://github.com/brendanzab/gl-rs/"
repository = "https://github.com/brendanzab/gl-rs/"
readme = "README.md"
categories = ["api-bindings", "rendering::graphics-api"]
keywords = ["webgl", "stdweb"]
edition = "2018"

[build-dependencies]
webgl_generator = { version = "0.2.0", path = "../webgl_generator" }

[dependencies]
stdweb-derive = "0.5"
stdweb = "0.4"
serde = "1.0"
serde_derive = "1.0"
