[package]

name = "gl_generator"
version = "0.0.4-pre"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Corey Richardson",
        "Arseny Kapoulkine"
]
description = "Bindings generator for all versions and extensions of OpenGL, OpenGL ES, WGL, GLX or EGL."
repository = "https://github.com/bjz/gl-rs"
keywords = ["opengl"]
license = "Apache-2.0"

[lib]

name = "gl_generator"
path = "lib.rs"
plugin = true

[dependencies]
rust-xml = "*"

[dependencies.gl_common]
path = "../gl_common"
version = "*"

[dependencies.khronos_api]
path = "../khronos_api"
version = "*"
