[package]

name = "gl_generator"
version = "0.0.1"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>",
        "Corey Richardson",
        "Arseny Kapoulkine"
]

[lib]

name = "gl_generator"
path = "lib.rs"
plugin = true

[dependencies.gl_common]
path = "../gl_common"

[dependencies.xml-rs]
git = "https://github.com/netvl/xml-rs"

[dependencies.khronos_api]
path = "../khronos_api"
